--- a/window_sliding/3.longest_substring_without_repeating_characters.md
+++ b/window_sliding/3.longest_substring_without_repeating_characters.md
@@ -32,3 +32,20 @@ Output: 0
 ```
 
 ## Problem Approach
+The hashmap approach: 
+```
+class Solution(object):
+    def lengthOfLongestSubstring(self, s):
+        answer = 0
+        d = {}
+        for j in range(0, len(s)):
+            if s[j] not in d:
+                d[s[j]] = j 
+            else:
+                for key in d.keys():
+                    if d[key] < d[s[j]]:
+                        del d[key]
+                d[s[j]] = j 
+            answer = max(len(d), answer)
+        return answer
+```
