--- a/window_sliding/3.longest_substring_without_repeating_characters.md
+++ b/window_sliding/3.longest_substring_without_repeating_characters.md
@@ -32,20 +32,36 @@ Output: 0
 ```
 
 ## Problem Approach
-The hashmap approach: 
+- We want to keep a hashmap which stores 'unique' character, where the key is the character and the value is the index of the character
 ```
+'abc' = {a: 0, b: 1, c:2} 
+```
+- If we encountered a repeated character (by checking the key), we want to start a new substring by removing the old character and update the hashmap: 
+`abca` --> `bca` 
+```
+Original string: abcabcbb 
+'abc' = {a: 0, b: 1, c:2} 
+---
+'abca': We encounter a repeated character!  (a)   // update index of a to be 3
+'bca' = {a: 3, b: 1, c:2}   
+---
+'abcab': We encounter a repeated character!  (b)  // update index of b to be 4 
+'cab' =  {a: 3, b: 4, c:2}   
+  ...
+```
+- Since the hashmap contains unique character, we need to return when the length of the hashmap is LARGEST. That means it contains the longest unique character. 
+```python
 class Solution(object):
     def lengthOfLongestSubstring(self, s):
-        answer = 0
-        d = {}
-        for j in range(0, len(s)):
-            if s[j] not in d:
+        answer = 0; d = {}
+        for j in range(0, len(s)):      
+            if s[j] not in d:     // 1. if no repeated character found, add to hashmap 
                 d[s[j]] = j 
             else:
-                for key in d.keys():
+                for key in d.keys():   // 2. remove all keys occur before the old repeated character  (oooz**z) --> (**z) 
                     if d[key] < d[s[j]]:
                         del d[key]
-                d[s[j]] = j 
-            answer = max(len(d), answer)
+                d[s[j]] = j            // 3. update the hash table {z: 3 to z: 6) for "oooz**z" 
+            answer = max(len(d), answer) // 4. update our answer
         return answer
 ```
