--- a/window_sliding/3.longest_substring_without_repeating_characters.md
+++ b/window_sliding/3.longest_substring_without_repeating_characters.md
@@ -55,13 +55,13 @@ class Solution(object):
     def lengthOfLongestSubstring(self, s):
         answer = 0; d = {}
         for j in range(0, len(s)):      
-            if s[j] not in d:     // 1. if no repeated character found, add to hashmap 
+            if s[j] not in d:     # 1. if no repeated character found, add to hashmap 
                 d[s[j]] = j 
             else:
-                for key in d.keys():   // 2. remove all keys occur before the old repeated character  (oooz**z) --> (**z) 
+                for key in d.keys():   # 2. remove all keys occur before the old repeated character  (oooz**z) --> (**z) 
                     if d[key] < d[s[j]]:
                         del d[key]
-                d[s[j]] = j            // 3. update the hash table {z: 3 to z: 6) for "oooz**z" 
-            answer = max(len(d), answer) // 4. update our answer
+                d[s[j]] = j            # 3. update the hash table {z: 3 to z: 6) for "oooz**z" 
+            answer = max(len(d), answer)  # 4. update our answer
         return answer
 ```
