--- a/window_sliding/3.longest_substring_without_repeating_characters.md
+++ b/window_sliding/3.longest_substring_without_repeating_characters.md
@@ -32,6 +32,8 @@ Output: 0
 ```
 
 ## Problem Approach
+
+### The hashmap approach -- O(n^2) 
 - We want to keep a hashmap which stores 'unique' character, where the key is the character and the value is the index of the character
 ```
 'abc' = {a: 0, b: 1, c:2} 
@@ -69,3 +71,7 @@ class Solution(object):
             answer = max(len(d), answer)  
         return answer
 ```
+- **Runtime**: we looping through each letter in the string in line `for j in range(0, len(s)):` and when we delete each key in the hashmap at step 3, we have to loop through the whole dictionary key (which at worst could be O(N) 
+
+
+
