--- a/window_sliding/3.longest_substring_without_repeating_characters.md
+++ b/window_sliding/3.longest_substring_without_repeating_characters.md
@@ -33,7 +33,7 @@ Output: 0
 
 ## Problem Approach
 
-### The hashmap approach -- O(n^2) 
+### The hashmap approach -- O(N^2) 
 - We want to keep a hashmap which stores 'unique' character, where the key is the character and the value is the index of the character
 ```
 'abc' = {a: 0, b: 1, c:2} 
