--- a/window_sliding/3.longest_substring_without_repeating_characters.md
+++ b/window_sliding/3.longest_substring_without_repeating_characters.md
@@ -74,4 +74,32 @@ class Solution(object):
 - **Runtime**: we looping through each letter in the string in line `for j in range(0, len(s)):` and when we delete each key in the hashmap at step 3, we have to loop through the whole dictionary key (which at worst could be O(N) 
 
 
+### The two pointer approach + a hashmap 
+- We do the same thing as above, but now we have i = left pointer, j = right pointer
+- Now instead of deleting keys of the hash table, we simply update the left pointer to equal the last repeated character found index + 1 (to start a new string) 
+```
+abc, left = 0, right = 2
+abca, left = 1, right = 3 
+```
+- We have a hashmap which store the current index of our character: `{a: 3, b: 1: c: 2}`
+- Solution: 
+```
+class Solution(object):
+    def lengthOfLongestSubstring(self, s):
+        answer = 0; i = 0
+        d = {}
+        for j in range(0, len(s)):
+           // s[i:j] represent our current string 
+            if s[j] not in s[i:j]:
+                d[s[j]] = j 
+            else:
+            // update the left pointer one step to the right of the repeatead character 
+            // a***a: left = 0, right = 3, which represent the string "a***" 
+            // now become left = 1, right = 4, which represent the string "***a" 
+                i = d[s[j]] + 1 
+            // update our hashtable to store the new unique string: {a: 0} -> {a: 4} 
+                d[s[j]] = j 
+            answer = max(j - i + 1, answer) 
+        return answer
+```
 
