--- a/window_sliding/3.longest_substring_without_repeating_characters.md
+++ b/window_sliding/3.longest_substring_without_repeating_characters.md
@@ -74,7 +74,7 @@ class Solution(object):
 - **Runtime**: we looping through each letter in the string in line `for j in range(0, len(s)):` and when we delete each key in the hashmap at step 3, we have to loop through the whole dictionary key (which at worst could be O(N) 
 
 
-### The two pointer approach + a hashmap 
+### The two pointer approach + a hashmap O(n) 
 - We have i = left pointer, j = right pointer
 - We have a hashtable that store the key as the character, and value as the index of that character 
 - Now instead of deleting keys of the hash table, we simply update the left pointer to equal the last repeated character found index + 1 (to start a new string) 
