--- a/window_sliding/76.minimum_window_substring.md
+++ b/window_sliding/76.minimum_window_substring.md
@@ -16,6 +16,23 @@ If there is no such window in S that covers all characters in T, return the empt
 If there is such window, you are guaranteed that there will always be only one unique minimum window in S.
 
 ## Solution
+
+### Approach 1 (Sliding Window) 
+
+- **Built a validation function** to check if s contains all letter in t. 
+    - We have a imported library called Counter, which returns frequency of each letter 
+    ```python
+    s1 = "aaabbc" 
+    d1 = Counter(s1) 
+    --> {"a: 3, "b": 2, "c": 1 } 
+    ```
+    - We check for frequency of both s and t. If for every character in s, its frequency is higher than t, then we return True. 
+- Create two pointers, left and right. 
+     - Extend the right pointer as far as possible until we encounter a valid window
+     - If we found a valid window, move the left pointer until the window is no longer valid
+     - Record the minimum window 
+     - Then extend the right pointer again 
+- Solution 
 ```python
 from collections import Counter 
 class Solution(object):
@@ -33,9 +50,12 @@ class Solution(object):
     def minWindow(self, s, t):
         left, right = 0, 0 
         ans = ""
+        # Step 1: Extend the right pointer as far as possible 
         while right < len(s)+1:
             substr = s[left:right]  
+            # While the window is valid, we extend the left pointer 
             while self.validate(substr, t):
+               # Record the answer everytime 
                 if ans == "" or len(substr) < len(ans): 
                     ans = substr
                 left += 1  
