--- a/window_sliding/1438.md
+++ b/window_sliding/1438.md
@@ -19,3 +19,10 @@ class Solution(object):
             return right - left + 1 
 ```
 - Runtime: this runtime is most likely O(n^2) because we constantly need to find what is the min_ and max_ of the curernt subarary. We need to optimize this. 
+
+
+### Deques
+Revisit this later. But what happen is:
+- We need to keep 2 list (maxl, minl) one in increasing order and one in decreasing order (store index of the array) 
+- The first item in the list keeps track of the index of min and max of that subarray
+- If maxl[0] - minl[0] > limit, we move pointer left & we need to remove the front of whichever list that has index < left to shrink the subarray 
