--- a/graph/1110.delete_nodes_forest.md
+++ b/graph/1110.delete_nodes_forest.md
@@ -1,3 +1,5 @@
+
+```python
 # Definition for a binary tree node.
 # class TreeNode:
 #     def __init__(self, val=0, left=None, right=None):
@@ -25,3 +27,4 @@ class Solution:
         if root.val not in to_delete:
             answer.append(root)
         return answer
+```
