--- a/string/1239.maximum_length_of_unique_characters.md
+++ b/string/1239.maximum_length_of_unique_characters.md
@@ -1,3 +1,5 @@
+
+```python
 import collections
 class Solution:
     def maxLength(self, arr: List[str]) -> int:
@@ -14,3 +16,4 @@ class Solution:
         if len(keys) == 0:
             return 0
         return max(len(a) for a in keys) 
+```
