--- a/string/1239.maximum_length_of_unique_characters.md
+++ b/string/1239.maximum_length_of_unique_characters.md
@@ -1,13 +1,55 @@
 
+
+# Problem
+Given an array of strings arr. String s is a concatenation of a sub-sequence of arr which have unique characters.
+Return the maximum possible length of s.
+
+Example 1:
+```
+Input: arr = ["un","iq","ue"]
+Output: 4
+Explanation: All possible concatenations are "","un","iq","ue","uniq" and "ique".
+Maximum length is 4.
+```
+Example 2:
+```
+Input: arr = ["cha","r","act","ers"]
+Output: 6
+Explanation: Possible solutions are "chaers" and "acters".
+```
+Example 3:
+```
+Input: arr = ["abcdefghijklmnopqrstuvwxyz"]
+Output: 26
+ ```
+ 
+### Solution 
+- Step 1: Check first if there is any word with duplicate characters:
+```python
+input = ["aaa"]
+output = 0
+```
+- Step 2: 
+    + create an array called "keys" which will contain ALL the potential combination fo the words.
+    + right now keys =  ["cha","r","act","ers"] 
+    + for each word in the original array, concatenate it with the word in keys; 
+        => ["chacha", "char", "chaact", "chaers"]  (for "cha") 
+        + append it to the keys array 
+        ["cha","r","act","ers", "chacha", "char", "chaact", "chaers"] 
+        => ["chacha", "char", "chaact", "chaers"]  (for "r") 
+
+ 
 ```python
 import collections
 class Solution:
     def maxLength(self, arr: List[str]) -> int:
+    
+        # Step 1. check if any duplicate characters 
         keys = []
         for word in arr:
             if len(set(word)) == len(word):
                 keys.append(word)
-        answer = 0 
+        # Step 2 
         for a in arr:
             for b in keys[:]:
                 new_word = a + b
